minicss extract plugin, image processing

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,7 +1,7 @@
 $bg: #ff0;
 
 body{
-    background: $bg;
+    background-image: url('../img/download.png');
     padding: 0;
     margin: 0;
     h1{
