--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -4,6 +4,8 @@ body{
     background-image: url('../img/download.png');
     padding: 0;
     margin: 0;
+    color: red;
+    font-family: sans-serif;
     h1{
         font-size: 2rem;
         transform: translateY(23px);
