--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,12 +1,12 @@
 $bg: #ff0;
 
-body{
+body {
     background-image: url('../img/download.png');
     padding: 0;
     margin: 0;
-    color: red;
+    color: #f00;
     font-family: sans-serif;
-    h1{
+    h1 {
         font-size: 2rem;
         transform: translateY(23px);
     }
